# llama.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Package.swift  README.md  build-xcframework.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py  package-lock.json  test.py  test.sh
.github/workflows/: build-linux-cross.yml  build.yml
cmake/: Findittnotify.cmake
common/: CMakeLists.txt  arg.cpp  chat.cpp  chat.h  common.cpp  common.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  sampling.cpp
dev/: todo.md
docs/: android.md  build.md  docker.md  function-calling.md  install.md  llguidance.md
docs/backend/: SYCL.md
docs/development/: HOWTO-add-model.md  debugging-tests.md  token_generation_performance_tips.md
examples/: CMakeLists.txt
examples/convert-llama2c-to-ggml/: convert-llama2c-to-ggml.cpp
examples/embedding/: embedding.cpp
examples/export-lora/: export-lora.cpp
examples/gguf/: gguf.cpp
examples/gguf-hash/: gguf-hash.cpp
examples/gguf-split/: CMakeLists.txt  gguf-fuse.cpp  gguf-split.cpp
examples/llama-bench/: llama-bench.cpp
examples/llama.swiftui/llama.cpp.swift/: LibLlama.swift
examples/llama.swiftui/llama.swiftui.xcodeproj/: project.pbxproj
examples/llava/: CMakeLists.txt  README-granitevision.md  clip.cpp  clip.h  llava.cpp  phi4mm-cli.cpp  phi4mm-test.sh  phi4mm_convert_encoder_to_gguf.py  qwen2_5_vl_surgery.py  qwen2vl-cli.cpp
examples/lookahead/: lookahead.cpp
examples/main/: CMakeLists.txt  main.cpp
examples/parallel/: parallel.cpp
examples/passkey/: passkey.cpp
examples/quantize/: README.md
examples/rpc/: README.md
examples/run/linenoise.cpp/: linenoise.cpp
examples/server/: CMakeLists.txt  README.md  server.cpp  translator.cpp  translator.hpp  utils.hpp
examples/server/public/: prompts.config.example.json  prompts.config.json.example
examples/server/tests/: utils.py
examples/server/tests/unit/: test_completion.py  test_predicted_outputs.py  test_tool_call.py
examples/server/webui/: README.md  index.html  package-lock.json  package.json
examples/server/webui/public/: prompts.config.json
examples/server/webui/src/: App.tsx  Config.ts  i18n.tsx  main.tsx
examples/server/webui/src/components/: CanvasPyInterpreter.tsx  ChatInput.tsx  ChatMessage.tsx  ChatScreen.tsx  ConversationList.tsx  Header.tsx  MarkdownDisplay.tsx  ModelSelector.tsx  SettingDialog.tsx  Sidebar.tsx  TranslateButton.tsx
examples/server/webui/src/locales/cn/: translation.json
examples/server/webui/src/locales/de/: translation.json
examples/server/webui/src/locales/en/: translation.json
examples/server/webui/src/locales/es/: translation.json
examples/server/webui/src/locales/fr/: translation.json
examples/server/webui/src/locales/it/: translation.json
examples/server/webui/src/locales/ru/: translation.json
examples/server/webui/src/utils/: UseStateCallback.tsx  app.context.tsx  misc.ts
examples/simple/: simple.cpp
examples/simple-tts/: CMakeLists.txt  README.md  simple-tts.cpp
examples/speculative/: speculative.cpp
examples/sycl/: README.md
examples/tts/: tts.cpp
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-backend.h  ggml-cpu.h  ggml-qnn.h  ggml.h  gguf.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-reg.cpp  ggml-backend.c  ggml-backend.cpp  ggml-impl.h  ggml-qnn.cpp  ggml-quants.c  ggml-quants.h  ggml.c  gguf.cpp
ggml/src/ggml-cann/: aclnn_ops.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  cpu-feats-x86.cpp  ggml-cpu-aarch64.cpp  ggml-cpu-impl.h  ggml-cpu-quants.c  ggml-cpu.c  ggml-cpu.cpp
ggml/src/ggml-cuda/: CMakeLists.txt  __mp.cuh  common.cuh  cpy.cu  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile-f16.cu  fattn-tile-f32.cu  fattn-vec-f16.cuh  fattn-vec-f32.cuh  fattn-wmma-f16.cu  fattn.cu  ggml-cuda.cu  mmq.cuh  mmvq.cu  quantize.cu  vecdotq.cuh  wkv.cu
ggml/src/ggml-cuda/vendors/: hip.h  (+1 more)
ggml/src/ggml-hip/: CMakeLists.txt
ggml/src/ggml-metal/: ggml-metal-impl.h  ggml-metal.m  ggml-metal.metal
ggml/src/ggml-musa/: CMakeLists.txt  ggml-musa.h
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-qnn/: .clang-format  CMakeLists.txt  backend-ops.cpp  backend-ops.hpp  backend.hpp  buffer.hpp  dl-loader.hpp  dl_loader.hpp  ggml-qnn-impl.h  ggml-qnn-ops.cpp  ggml-qnn-ops.h  ggml-qnn.cpp  graph.cpp  graph.hpp  logger.cpp  logger.hpp  op-config-base.hpp  op-config-caps.cpp  op-config-impl.cpp  op-config-impl.hpp  op-config.cpp  op-config.hpp  qnn-lib.cpp  qnn-lib.hpp  qnn-types.hpp  tensor.hpp  utils.cpp  utils.hpp
ggml/src/ggml-rpc/: ggml-rpc.cpp
ggml/src/ggml-sycl/: CMakeLists.txt  common.hpp  convert.cpp  convert.hpp  cpy.cpp  cpy.hpp  dmmv.cpp  element_wise.cpp  getrows.cpp  ggml-sycl.cpp  im2col.cpp  norm.cpp  norm.hpp  outprod.cpp  sycl_hw.cpp  sycl_hw.hpp
ggml/src/ggml-sycl/dpct/: helper.hpp
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  dequant_funcs_mmq.comp  mul_mm.comp  mul_mmq.comp  types.comp  vulkan-shaders-gen.cpp  wkv7.comp
gguf-py/gguf/: constants.py  gguf_writer.py  metadata.py  tensor_mapping.py
include/: llama.h
models/templates/: README.md  llama-cpp-microsoft-Phi-4-mini-instruct.jinja
scripts/: build-run-android.sh  get_chat_template.py  tool_bench.py  tool_bench.sh
src/: CMakeLists.txt  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-chat.h  llama-context.cpp  llama-context.h  llama-cparams.h  llama-grammar.cpp  llama-grammar.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-mmap.cpp  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampling.cpp  llama-vocab.cpp  llama-vocab.h  llama.cpp
tests/: simple-backend-ut.cpp  test-backend-ops.cpp  test-chat-template.cpp  test-chat.cpp  test-gguf.cpp
toolcall/: CMakeLists.txt  client.cpp  handler.cpp  mcp_messages.cpp  mcp_messages.h  mcp_sse_transport.cpp  mcp_sse_transport.h  mcp_transport.h  params.cpp  toolcall-client.h  toolcall-handler.h
(+3 files in other folders)
